--- a/_quarto.yml
+++ b/_quarto.yml
@@ -2,6 +2,13 @@ project:
   type: book
   output-dir: docs
 
+crossref:
+  fig-prefix: Abbildung
+  tbl-prefix: Tabelle
+  fig-title: Abbildung    
+  tbl-title: Tabelle 
+  title-delim: —     # (default is ":")
+
 book:
   title: "Skript Mathematik"
   author: "Prof. Dr. Jochen Kruppa"
@@ -10,11 +17,19 @@ book:
   cover-image: cover.png
   chapters:
     - index.qmd
-    - intro.qmd
-    - summary.qmd
-    - references.qmd
-
+    - literature.qmd
+    - preface.qmd
+    - part: geometry-preface.qmd
+      chapters:
+      - geometry-area.qmd
+      - geometry-volume.qmd
+    - part: probability-preface.qmd
+      chapters:
+      - probability-basic.qmd
+      - probability-conditional.qmd
+      
 bibliography: references.bib
+lang: de 
 
 format:
   html:
@@ -22,5 +37,4 @@ format:
   pdf:
     documentclass: scrreprt
 
-editor: visual
 
