--- a/_quarto.yml
+++ b/_quarto.yml
@@ -15,14 +15,14 @@ book:
   date: "11. October 2022"
   link-citations: yes
   cover-image: cover.png
-  downloads: [pdf]
-  page-footer: 
-    left: "Copyright 2022, Jochen Kruppa" 
-    right: 
-      - icon: github
-        href: https://github.com/jkruppa
-      - icon: youtube 
-        href: https://www.youtube.com/c/JochenKruppa
+  #downloads: [pdf]
+  #page-footer: 
+  #  left: "Copyright 2022, Jochen Kruppa" 
+  #  right: 
+  #    - icon: github
+  #      href: https://github.com/jkruppa
+  #    - icon: youtube 
+  #      href: https://www.youtube.com/c/JochenKruppa
   chapters:
     - index.qmd
     - literature.qmd
