--- a/images/area_volume.skt/Properties.plist
+++ b/images/area_volume.skt/Properties.plist
@@ -11,9 +11,9 @@
 	</array>
 	<key>Color1</key>
 	<array>
-		<real>0.92156862745098034</real>
-		<real>0.49411764705882355</real>
-		<real>0.60784313725490191</real>
+		<real>0.058823529411764705</real>
+		<real>0.19607843137254902</real>
+		<real>0.56470588235294117</real>
 		<real>1</real>
 	</array>
 	<key>Colors</key>
@@ -170,7 +170,7 @@
 		</array>
 	</array>
 	<key>LayerIndex</key>
-	<integer>1</integer>
+	<integer>2</integer>
 	<key>Layers</key>
 	<array>
 		<dict>
@@ -193,7 +193,7 @@
 			<key>File</key>
 			<string>Layer~1.png</string>
 			<key>Hidden</key>
-			<false/>
+			<true/>
 			<key>Opacity</key>
 			<real>100</real>
 		</dict>
@@ -202,6 +202,8 @@
 			<false/>
 			<key>CompositingMode</key>
 			<integer>0</integer>
+			<key>File</key>
+			<string>Layer~2.png</string>
 			<key>Hidden</key>
 			<false/>
 			<key>Opacity</key>
