--- a/_quarto.yml
+++ b/_quarto.yml
@@ -38,6 +38,9 @@ book:
       - probability-basic.qmd
       - probability-conditional.qmd
       - probability-distribution.qmd
+    - part: functions-preface.qmd
+      chapters: 
+        - functions-basic.qmd
       
 bibliography: references.bib
 lang: de 
