--- a/_quarto.yml
+++ b/_quarto.yml
@@ -36,7 +36,7 @@ book:
       chapters: 
       - vector-basic.qmd
       - matrix-basic.qmd
-      - matrix-eigenwerte.qmd
+#      - matrix-eigenwerte.qmd
       
 bibliography: references.bib
 lang: de 
