--- a/images/area_volume.skt/Properties.plist
+++ b/images/area_volume.skt/Properties.plist
@@ -11,9 +11,9 @@
 	</array>
 	<key>Color1</key>
 	<array>
-		<real>0.39215686274509803</real>
-		<real>0.090196078431372548</real>
-		<real>0.72941176470588232</real>
+		<real>0.8784313725490196</real>
+		<real>0.36862745098039218</real>
+		<real>0.52156862745098043</real>
 		<real>1</real>
 	</array>
 	<key>Colors</key>
@@ -170,7 +170,7 @@
 		</array>
 	</array>
 	<key>LayerIndex</key>
-	<integer>2</integer>
+	<integer>3</integer>
 	<key>Layers</key>
 	<array>
 		<dict>
@@ -204,6 +204,18 @@
 			<integer>0</integer>
 			<key>File</key>
 			<string>Layer~2.png</string>
+			<key>Hidden</key>
+			<true/>
+			<key>Opacity</key>
+			<real>100</real>
+		</dict>
+		<dict>
+			<key>AlphaLocked</key>
+			<false/>
+			<key>CompositingMode</key>
+			<integer>1</integer>
+			<key>File</key>
+			<string>Layer~3.png</string>
 			<key>Hidden</key>
 			<false/>
 			<key>Opacity</key>
