--- a/_quarto.yml
+++ b/_quarto.yml
@@ -28,13 +28,13 @@ book:
       - vector-basic.qmd
       - matrix-basic.qmd
     - part: probability-preface.qmd
-#      chapters:
-#      - probability-basic.qmd
+      chapters:
+      - probability-basic.qmd
 #      - probability-conditional.qmd
 #      - probability-distribution.qmd
     - part: functions-preface.qmd
-#      chapters: 
-#      - functions-basic.qmd
+      chapters: 
+      - functions-basic.qmd
 #      - functions-distance.qmd
 #      - matrix-eigenwerte.qmd
       
