--- a/_quarto.yml
+++ b/_quarto.yml
@@ -30,12 +30,12 @@ book:
     - part: probability-preface.qmd
       chapters:
       - probability-basic.qmd
-#      - probability-conditional.qmd
+      - probability-conditional.qmd
 #      - probability-distribution.qmd
     - part: functions-preface.qmd
       chapters: 
       - functions-basic.qmd
-#      - functions-distance.qmd
+      - functions-extrem-stamm.qmd
 #      - matrix-eigenwerte.qmd
       
 bibliography: references.bib
