--- a/images/prob.skt/Properties.plist
+++ b/images/prob.skt/Properties.plist
@@ -214,8 +214,6 @@
 			<false/>
 			<key>CompositingMode</key>
 			<integer>0</integer>
-			<key>File</key>
-			<string>Layer~3.png</string>
 			<key>Hidden</key>
 			<false/>
 			<key>Opacity</key>
@@ -225,9 +223,21 @@
 			<key>AlphaLocked</key>
 			<false/>
 			<key>CompositingMode</key>
-			<integer>1</integer>
+			<integer>0</integer>
 			<key>File</key>
 			<string>Layer~4.png</string>
+			<key>Hidden</key>
+			<true/>
+			<key>Opacity</key>
+			<real>100</real>
+		</dict>
+		<dict>
+			<key>AlphaLocked</key>
+			<false/>
+			<key>CompositingMode</key>
+			<integer>1</integer>
+			<key>File</key>
+			<string>Layer~5.png</string>
 			<key>Hidden</key>
 			<true/>
 			<key>Opacity</key>
