--- a/images/prob.skt/Properties.plist
+++ b/images/prob.skt/Properties.plist
@@ -11,9 +11,9 @@
 	</array>
 	<key>Color1</key>
 	<array>
-		<real>0.50196078431372548</real>
-		<real>0.50196078431372548</real>
-		<real>0.50196078431372548</real>
+		<real>0.85882352941176465</real>
+		<real>0.086274509803921567</real>
+		<real>0.031372549019607843</real>
 		<real>1</real>
 	</array>
 	<key>Colors</key>
@@ -170,7 +170,7 @@
 		</array>
 	</array>
 	<key>LayerIndex</key>
-	<integer>3</integer>
+	<integer>5</integer>
 	<key>Layers</key>
 	<array>
 		<dict>
@@ -205,7 +205,7 @@
 			<key>File</key>
 			<string>Layer~2.png</string>
 			<key>Hidden</key>
-			<false/>
+			<true/>
 			<key>Opacity</key>
 			<real>100</real>
 		</dict>
@@ -214,6 +214,8 @@
 			<false/>
 			<key>CompositingMode</key>
 			<integer>0</integer>
+			<key>File</key>
+			<string>Layer~3.png</string>
 			<key>Hidden</key>
 			<false/>
 			<key>Opacity</key>
@@ -227,6 +229,42 @@
 			<key>File</key>
 			<string>Layer~4.png</string>
 			<key>Hidden</key>
+			<false/>
+			<key>Opacity</key>
+			<real>100</real>
+		</dict>
+		<dict>
+			<key>AlphaLocked</key>
+			<false/>
+			<key>CompositingMode</key>
+			<integer>0</integer>
+			<key>File</key>
+			<string>Layer~5.png</string>
+			<key>Hidden</key>
+			<false/>
+			<key>Opacity</key>
+			<real>100</real>
+		</dict>
+		<dict>
+			<key>AlphaLocked</key>
+			<false/>
+			<key>CompositingMode</key>
+			<integer>1</integer>
+			<key>File</key>
+			<string>Layer~6.png</string>
+			<key>Hidden</key>
+			<true/>
+			<key>Opacity</key>
+			<real>100</real>
+		</dict>
+		<dict>
+			<key>AlphaLocked</key>
+			<false/>
+			<key>CompositingMode</key>
+			<integer>0</integer>
+			<key>File</key>
+			<string>Layer~7.png</string>
+			<key>Hidden</key>
 			<true/>
 			<key>Opacity</key>
 			<real>100</real>
@@ -237,7 +275,7 @@
 			<key>CompositingMode</key>
 			<integer>1</integer>
 			<key>File</key>
-			<string>Layer~5.png</string>
+			<string>Layer~8.png</string>
 			<key>Hidden</key>
 			<true/>
 			<key>Opacity</key>
