--- a/images/prob.skt/Properties.plist
+++ b/images/prob.skt/Properties.plist
@@ -11,9 +11,9 @@
 	</array>
 	<key>Color1</key>
 	<array>
-		<real>0.85882352941176465</real>
-		<real>0.086274509803921567</real>
-		<real>0.031372549019607843</real>
+		<real>0.47058823529411764</real>
+		<real>0.69803921568627447</real>
+		<real>0.85098039215686272</real>
 		<real>1</real>
 	</array>
 	<key>Colors</key>
@@ -170,7 +170,7 @@
 		</array>
 	</array>
 	<key>LayerIndex</key>
-	<integer>5</integer>
+	<integer>6</integer>
 	<key>Layers</key>
 	<array>
 		<dict>
@@ -217,7 +217,7 @@
 			<key>File</key>
 			<string>Layer~3.png</string>
 			<key>Hidden</key>
-			<false/>
+			<true/>
 			<key>Opacity</key>
 			<real>100</real>
 		</dict>
@@ -229,7 +229,7 @@
 			<key>File</key>
 			<string>Layer~4.png</string>
 			<key>Hidden</key>
-			<false/>
+			<true/>
 			<key>Opacity</key>
 			<real>100</real>
 		</dict>
@@ -241,7 +241,7 @@
 			<key>File</key>
 			<string>Layer~5.png</string>
 			<key>Hidden</key>
-			<false/>
+			<true/>
 			<key>Opacity</key>
 			<real>100</real>
 		</dict>
@@ -253,6 +253,42 @@
 			<key>File</key>
 			<string>Layer~6.png</string>
 			<key>Hidden</key>
+			<false/>
+			<key>Opacity</key>
+			<real>100</real>
+		</dict>
+		<dict>
+			<key>AlphaLocked</key>
+			<false/>
+			<key>CompositingMode</key>
+			<integer>1</integer>
+			<key>File</key>
+			<string>Layer~7.png</string>
+			<key>Hidden</key>
+			<false/>
+			<key>Opacity</key>
+			<real>100</real>
+		</dict>
+		<dict>
+			<key>AlphaLocked</key>
+			<false/>
+			<key>CompositingMode</key>
+			<integer>0</integer>
+			<key>File</key>
+			<string>Layer~8.png</string>
+			<key>Hidden</key>
+			<false/>
+			<key>Opacity</key>
+			<real>100</real>
+		</dict>
+		<dict>
+			<key>AlphaLocked</key>
+			<false/>
+			<key>CompositingMode</key>
+			<integer>1</integer>
+			<key>File</key>
+			<string>Layer~9.png</string>
+			<key>Hidden</key>
 			<true/>
 			<key>Opacity</key>
 			<real>100</real>
@@ -263,7 +299,7 @@
 			<key>CompositingMode</key>
 			<integer>0</integer>
 			<key>File</key>
-			<string>Layer~7.png</string>
+			<string>Layer~10.png</string>
 			<key>Hidden</key>
 			<true/>
 			<key>Opacity</key>
@@ -275,7 +311,7 @@
 			<key>CompositingMode</key>
 			<integer>1</integer>
 			<key>File</key>
-			<string>Layer~8.png</string>
+			<string>Layer~11.png</string>
 			<key>Hidden</key>
 			<true/>
 			<key>Opacity</key>
