--- a/_quarto.yml
+++ b/_quarto.yml
@@ -41,7 +41,9 @@ lang: de
 
 format:
   html:
-    theme: cosmo
+    theme:
+      light: zephyr
+      dark: superhero
     cover-image: cover2023.png
     mermaid:
       theme: default
