--- a/_quarto.yml
+++ b/_quarto.yml
@@ -13,7 +13,7 @@ book:
   title: "Mathematik für Agrarwissenschaften"
   subtitle: "Der kleine Leitfaden"
   author: "<a href='https://www.hs-osnabrueck.de/prof-dr-jochen-kruppa/'>Prof. Dr. Jochen Kruppa-Scheetz</a>"
-  date: "24. June 2024"
+  date: "25. June 2024"
   description: Eine Formelsammlung für Mathematik in den Agrarwissenschaften
   url: https://jkruppa.github.io/math
   repo-url: https://github.com/jkruppa/jkruppa.github.io/math
@@ -48,6 +48,7 @@ book:
     - part: zinsen-preface.qmd
       chapters: 
       - zins-basic.qmd
+    - part: abspann.qmd
 
 bibliography: references.bib
 lang: de 
@@ -68,7 +69,7 @@ format:
     code-tools: true
     mermaid:
       theme: neutral
-#  pdf:
-#    documentclass: scrreprt
+    pdf:
+      documentclass: scrreprt
 
 
