--- a/cover.skt/Properties.plist
+++ b/cover.skt/Properties.plist
@@ -11,9 +11,9 @@
 	</array>
 	<key>Color1</key>
 	<array>
-		<real>0.0</real>
-		<real>0.0</real>
-		<real>0.0</real>
+		<real>0.39215686274509803</real>
+		<real>0.090196078431372548</real>
+		<real>0.72941176470588232</real>
 		<real>1</real>
 	</array>
 	<key>Colors</key>
